@@ -25,6 +25,7 @@ Thomas McWilliams	<tgm9999@yahoo.com>		 2 Apr 2001
 Thu Oct 18 16:53:02 EEST 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
 
 	* Fix in makefiles. version.h and compile.h are needed by "make dep"
+	* Fixed arch/i86/mm/Makefile to make the tree compilable
 
 Wed Oct 17 11:32:57 CEST 2001	Arnaud Launay <asl@launay.org>
 
